@@ -26,6 +26,7 @@ Attachments are now processed in the order they were attached.
 * Fixed date detection bug in forwarded messages
 * Possible fix for blank screen issue (flush buffers rather than check for sent headers)
 * Fixed images showing up in excerpts when not specified
+* Fixed bug where time offset was applied twice
 
 = 1.5.15 (2013.07.01) =
 * Added message warning that filter 'postie_post' has been deprecated.
